# OpenBoard

./: .gitignore  C++StandardHeaderFile.txt  CMakeLists.txt  COPYING  COPYRIGHT  ChangeLog.html  LICENSE  LICENSE.txt  Open-Sankore.packproj  OpenBoard.iss  OpenBoard.packproj  OpenBoard.pro  OpenBoard.pro.user.c700c79  OpenBoard.pro.user.e1f9b55  README  README-OB-IN-A-WINDOW.txt  README.md  Sankore 3.1.iss  Sankore-Licence.txt  Sankore.iss  Sankore_3.1.pro  Subdirs.pro  TEST_OpenBoard_Win32.txt  buildDebianPackage  buildDebianPackage.sh  buildDebianPackageQmake-Qt4  changes_porting_qt5.txt  index.html  lgpl.txt  lgplC++StandardHeaderFile.txt  libs.pri  release.linux.sh  release.macx.sh  release.vc9.bat  release.win7.vc9.64.bat  release.win7.vc9.bat  todo.txt  todo_2.txt  version.txt
.github/ISSUE_TEMPLATE/: bug_report.md  build-problem.md  building-or-packaging-issue.md  feature_request.md  question.md
cmake/: DependencyFFmpeg.cmake  DependencyOpenSSL.cmake  DependencyPipewire.cmake  DependencyPoppler.cmake  DependencyQt.cmake  DependencyQuaZip.cmake  DependencyX11.cmake  DependencyZlib.cmake  FetchContentFreetype.cmake  FetchContentPoppler.cmake  FetchContentQuaZip.cmake  FetchContentXpdf.cmake  Platform.cmake  Version.cmake
css/: basic.css
fr/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
fr/css/: style.css
nbproject/: configurations.xml  project.xml
nbproject/private/: Debug.properties  Release.properties  configurations.xml  private.xml
plugins/: plugins.pri
plugins/cffadaptor/: UBCFFAdaptor.pro  postScript_mac.sh
release_scripts/linux/: build.sh  package.sh
release_scripts/osx/: build.sh  codesign.sh  notarize.sh  package.sh  release.macx.sh  relink_libs.sh
release_scripts/windows/: OpenBoard.iss  create-setup.bat  release.win7.vc9.bat
resources/: OpenBoard.qrc  darkTheme.qss  lightTheme.qss  sankore.qrc  style.qss
resources/etc/: OpenBoard.config  OpenBoard.css  Uniboard.css  asyncAPI.js  freezedWidgetWrapper.html  kwinKeepAbove.js  npapi-wrapper.application.x-shockwave-flash.swf.htm  npapi-wrapper.config.xml  widgets.md5sum
resources/fonts/: COPYRIGHT  n019004l.pfb  n019023l.pfb  n019024l.pfb  n021003l.pfb  n021004l.pfb  n021023l.pfb  n021024l.pfb  n022003l.pfb  n022004l.pfb  n022023l.pfb  n022024l.pfb
resources/forms/: CMakeLists.txt  blackoutWidget.ui  brushProperties.ui  capturePublishing.ui  documents.ui  intranetPodcastPublishingDialog.ui  library.ui  mainWindow-sankore.ui  mainWindow.ui  preferences.ui  preferences.ui.autosave  trapFlash.ui  webPublishing.ui  youTubePublishingDialog.ui
resources/i18n/: Localizable.strings  OpenBoard_ar.ts  OpenBoard_bg.ts  OpenBoard_ca.ts  OpenBoard_cs.ts  OpenBoard_da.ts  OpenBoard_de.ts  OpenBoard_el.ts  OpenBoard_en.ts  OpenBoard_en_UK.ts  OpenBoard_es.ts  OpenBoard_eu.ts  OpenBoard_fr.ts  OpenBoard_fr_CH.ts  OpenBoard_gl.ts  OpenBoard_hr.ts  OpenBoard_hu.ts  OpenBoard_it.ts  OpenBoard_iw.ts  OpenBoard_ja.ts  OpenBoard_ko.ts  OpenBoard_mg.ts  OpenBoard_nb.ts  OpenBoard_nl.ts  OpenBoard_pl.ts  OpenBoard_pt.ts  OpenBoard_pt_BR.ts  OpenBoard_ro.ts  OpenBoard_ru.ts  OpenBoard_sk.ts  OpenBoard_sv.ts  OpenBoard_tr.ts  OpenBoard_ua.ts  OpenBoard_uk.ts  OpenBoard_zh.ts  OpenBoard_zh_CN.ts  OpenBoard_zh_TW.ts  sankore_ar.qm  sankore_ar.ts  sankore_bg.ts  (+46 more)
resources/linux/: ch.openboard.OpenBoard.desktop  ch.openboard.OpenBoard.metainfo.xml  ch.openboard.OpenBoard.metainfo.xml.in  ch.openboard.openboard-ubz.xml  openboard-ubx.xml  openboard-ubz.xml  openboard.desktop  run.sh
resources/macx/: Entitlements.plist  Info.plist  OpenBoard.icns  OpenBoardDmg.icns  PowerPointImport.applescript  WebengineEntitlements.plist  appcast-mac.xml  growl.applescript  ubz.icns  upgrade.sh
resources/podcast/: uniboard.prx
resources/startupHints/: config.xml  index.html
resources/template/: intranet-podcast-metadata.template  npapi-wrapper.application.x-shockwave-flash.swf.htm
resources/webbrowser/: notfound.html  object-wrapper.html
resources/win/: OpenBoard.rc  appcast-win.xml  comodo-code-signing.pfx  sankore.rc
resources/windows/: xpdfrc
resources/www/: OpenBoard-web-player.html
src/adaptors/: CMakeLists.txt  UBCFFSubsetAdaptor.cpp  UBCFFSubsetAdaptor.h  UBExportAdaptor.cpp  UBExportAdaptor.h  UBExportCFF.cpp  UBExportCFF.h  UBExportDocument.cpp  UBExportDocument.h  UBExportDocumentCleaner.cpp  UBExportDocumentCleaner.h  UBExportDocumentCleanerQPDF.cpp  UBExportDocumentCleanerQPDF.h  UBExportDocumentSetAdaptor.cpp  UBExportDocumentSetAdaptor.h  UBExportFullPDF.cpp  UBExportFullPDF.h  UBExportPDF.cpp  UBExportPDF.h  UBExportWeb.cpp  UBExportWeb.h  UBImportAdaptor.cpp  UBImportAdaptor.h  UBImportCFF.cpp  UBImportCFF.h  UBImportDocument.cpp  UBImportDocument.h  UBImportDocumentSetAdaptor.cpp  UBImportDocumentSetAdaptor.h  UBImportImage.cpp  UBImportImage.h  UBImportPDF.cpp  UBImportPDF.h  UBImportSMART.cpp  UBImportSMART.h  UBImportVirtualPrinter.cpp  UBImportVirtualPrinter.h  UBIniFileParser.cpp  UBIniFileParser.h  UBMetadataDcSubsetAdaptor.cpp  (+18 more)
src/api/: CMakeLists.txt  UBLibraryAPI.cpp  UBLibraryAPI.h  UBW3CWidgetAPI.cpp  UBW3CWidgetAPI.h  UBWidgetMessageAPI.cpp  UBWidgetMessageAPI.h  UBWidgetUniboardAPI.cpp  UBWidgetUniboardAPI.h  UBWidgetVotingSystemAPI.cpp  UBWidgetVotingSystemAPI.h  api.pri
src/board/: CMakeLists.txt  UBBoardController.cpp  UBBoardController.h  UBBoardPaletteManager.cpp  UBBoardPaletteManager.h  UBBoardView.cpp  UBBoardView.h  UBColorPreferencesDialog.cpp  UBColorPreferencesDialog.h  UBDrawingController.cpp  UBDrawingController.h  UBFeaturesController.cpp  UBFeaturesController.h  UBLibraryController.cpp  UBLibraryController.h  UBLibraryTreeWidget.cpp  UBLibraryTreeWidget.h  board.pri
src/canvas/: UBCanvasController.cpp  UBCanvasController.h  UBCanvasPalette.cpp  UBCanvasPalette.h  UBCanvasView.cpp  UBCanvasView.h  canvas.pri
src/core/: CMakeLists.txt  OBCocoa.h  OBCocoa.mm  UB.h  UBApplication.cpp  UBApplication.h  UBDisplayManager.cpp  (+42 more)
suggested-wiki-changes/: Build-OpenBoard-on-Ubuntu-with-Qt6.md  Build-OpenBoard-on-Ubuntu.md
(+933 files in other folders)
